# qamomile-ai-harness

./: .gitignore  LICENSE  README.md  pyproject.toml
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json
benchmarks/cases/: QPC001_A1.json  QPC001_A2.json  QPC001_A3.json
docs/: external_harness_learnings.md  plugin_distribution.md  project_structure.md
docs/arxiv_papers/: 2606_19502_qaoa_maxcut.md  2606_20184_operator_learning.md  2606_20238_random_projection_multicopy.md  README.md
plugins/claude/qamomile-qcoder/.claude-plugin/: plugin.json
plugins/claude/qamomile-qcoder/commands/: qamomile-qcoder-workflow.md
plugins/codex/qamomile-qcoder/.codex-plugin/: plugin.json
plugins/codex/qamomile-qcoder/skills/qamomile-qcoder/: SKILL.md
plugins/codex/qamomile-qcoder/skills/qamomile-qcoder/references/: qamomile-doc-map.md
prompts/: offline_qamomile_agent.md
scripts/: prepare_qcoder_dataset.py
skills/qamomile_qcoder/: SKILL.md
src/qamomile_ai_harness/: __init__.py  cases.py  cli.py  dataset.py  eval_worker.py  evaluator.py  isolated.py  models.py  solutions.py  static_check.py
tests/: test_evaluator.py  test_isolated.py
tests/fixtures/solutions/: QPC001_A1.py  QPC001_A2.py  QPC001_A3.py
